# netmancer-cli

./: .gitignore  README.md  a.py  backup.py  netmancer  requirements.txt  setup.cfg
example/: network.ini
netmancer_cli/: cli.py
netmancer_cli/commands/: dhcpinfo.py  interface_status.py  list_network_interfaces.py  network_appy.py  showinfo.py
netmancer_cli/utils/: cidr_converter.py  logger.py  valid_interface.py
src/netmancer/: cli.py
src/netmancer/commands/: ethernet.py  list_network_nodes.py
