[metadata]
name = netmancer
version = 0.1.0
author = Prashant Pokhriyal
description = Network configuration manager for CloudX OS
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/yourusername/netman
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: POSIX :: Linux

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.12
install_requires =
    pyyaml >=6.0.1
[options.entry_points]
console_scripts =
    netmancer = netmancer.cli:main
